--- a/solution.ipynb
+++ b/solution.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "7b85d8f7447ebce0",
    "metadata": {
     "id": "7b85d8f7447ebce0"
@@ -293,7 +293,6 @@
     "    def __init__(\n",
     "        self, perplexity=30.0, n_components=2, n_iter=1000, learning_rate=200.0\n",
     "    ):\n",
-    "        # Input validation\n",
     "        if perplexity <= 0:\n",
     "            raise ValueError(\"perplexity must be positive\")\n",
     "        if n_components < 1:\n",
@@ -322,14 +321,9 @@
     "        D : ndarray of shape (n_samples, n_samples)\n",
     "            Matrix of squared Euclidean distances.\n",
     "        \"\"\"\n",
-    "        # Ensure floating-point type for numerical stability\n",
     "        X = X.astype(np.float64)\n",
-    "\n",
-    "        # ||x_i - x_j||^2 = (x_i·x_i) + (x_j·x_j) − 2*(x_i·x_j)\n",
     "        sum_X = np.sum(np.square(X), axis=1)\n",
     "        D = np.add.outer(sum_X, sum_X) - 2 * np.dot(X, X.T)\n",
-    "\n",
-    "        # Set diagonal to 0 to avoid small numerical residuals\n",
     "        np.fill_diagonal(D, 0.0)\n",
     "\n",
     "        return D\n",
@@ -363,16 +357,13 @@
     "        sigma : float\n",
     "            Optimal σ_i value that achieved the target perplexity.\n",
     "        \"\"\"\n",
-    "        # β = 1 / (2σ²)\n",
     "        beta_min, beta_max = -np.inf, np.inf\n",
     "        beta = 1.0\n",
     "\n",
-    "        # Ensure float type and ignore self-distance\n",
     "        distances_i = distances_i.astype(np.float64).copy()\n",
     "        distances_i[distances_i == 0] = np.inf\n",
     "\n",
     "        for _ in range(max_iter):\n",
-    "            # Compute Gaussian affinities\n",
     "            P_i = np.exp(-distances_i * beta)\n",
     "            P_i[distances_i == np.inf] = 0.0\n",
     "            sum_P_i = np.sum(P_i)\n",
@@ -380,15 +371,12 @@
     "                sum_P_i = 1e-12\n",
     "            P_i /= sum_P_i\n",
     "\n",
-    "            # Compute Shannon entropy and perplexity\n",
     "            H = -np.sum(P_i * np.log2(P_i + 1e-10))\n",
     "            perplexity = 2**H\n",
     "\n",
-    "            # Check for convergence\n",
     "            if abs(perplexity - target_perplexity) < tol:\n",
     "                break\n",
     "\n",
-    "            # Adjust β (inverse variance) based on whether entropy too high/low\n",
     "            if perplexity > target_perplexity:\n",
     "                beta_min = beta\n",
     "                beta = beta * 2 if beta_max == np.inf else (beta + beta_max) / 2\n",
@@ -416,18 +404,14 @@
     "        \"\"\"\n",
     "        N = X.shape[0]\n",
     "\n",
-    "        # Edge case: only one point\n",
     "        if N == 1:\n",
     "            return np.zeros((1, 1))\n",
     "\n",
-    "        # Compute squared distances (ensure float type)\n",
     "        distances = self._pairwise_distances(X).astype(np.float64)\n",
     "        P = np.zeros((N, N))\n",
     "        sigmas = np.zeros(N)\n",
     "\n",
-    "        # Compute conditional probabilities for each data point\n",
     "        for i in range(N):\n",
-    "            # Handle identical points (all distances ≈ 0)\n",
     "            if np.allclose(distances[i], 0):\n",
     "                P[i] = np.zeros(N)\n",
     "                continue\n",
@@ -435,11 +419,8 @@
     "            P[i] = p_i\n",
     "            sigmas[i] = sigma_i\n",
     "\n",
-    "        # Symmetrize and normalize\n",
     "        P = (P + P.T) / (2 * N)\n",
     "        np.fill_diagonal(P, 0.0)\n",
-    "\n",
-    "        # Prevent underflow and re-normalize\n",
     "        P = np.maximum(P, 1e-12)\n",
     "        P /= np.sum(P)\n",
     "\n",
@@ -461,19 +442,15 @@
     "        num : ndarray of shape (n_samples, n_samples)\n",
     "            Unnormalized pairwise affinities (for gradient reuse).\n",
     "        \"\"\"\n",
-    "        # Edge case: single point\n",
     "        if Y.shape[0] == 1:\n",
     "            return np.zeros((1, 1)), np.zeros((1, 1))\n",
     "\n",
-    "        # Compute pairwise squared distances\n",
     "        sum_Y = np.sum(np.square(Y), axis=1)\n",
     "        D = np.add.outer(sum_Y, sum_Y) - 2 * np.dot(Y, Y.T)\n",
     "\n",
-    "        # Student-t affinities\n",
     "        num = 1 / (1 + D)\n",
     "        np.fill_diagonal(num, 0.0)\n",
     "\n",
-    "        # Normalize\n",
     "        Q = num / np.sum(num)\n",
     "        Q = np.maximum(Q, 1e-12)\n",
     "\n",
@@ -500,15 +477,9 @@
     "        dY : ndarray of shape (n_samples, n_components)\n",
     "            Gradient of the KL divergence with respect to Y.\n",
     "        \"\"\"\n",
-    "        PQ = P - Q  # difference between high-D and low-D similarities\n",
-    "        # (P - Q) * num gives the force magnitude per pair\n",
-    "        PQ_num = 4 * (PQ * num)  # scalar weight for each pair, shape: (n_samples, n_samples)\n",
-    "        \n",
-    "        # Vectorized gradient computation:\n",
-    "        # For each point i: dY[i] = sum_j(PQ_num[i,j] * (Y[i] - Y[j]))\n",
-    "        # = sum_j(PQ_num[i,j] * Y[i]) - sum_j(PQ_num[i,j] * Y[j])\n",
-    "        # = Y[i] * sum_j(PQ_num[i,j]) - (PQ_num[i,:] @ Y)\n",
-    "        sum_PQ_num = np.sum(PQ_num, axis=1, keepdims=True)  # (n_samples, 1)\n",
+    "        PQ = P - Q\n",
+    "        PQ_num = 4 * (PQ * num)\n",
+    "        sum_PQ_num = np.sum(PQ_num, axis=1, keepdims=True)\n",
     "        dY = sum_PQ_num * Y - PQ_num @ Y\n",
     "\n",
     "        return dY\n",
@@ -527,7 +498,6 @@
     "        Y : ndarray of shape (n_samples, n_components)\n",
     "            Low-dimensional t-SNE embedding.\n",
     "        \"\"\"\n",
-    "        # Input validation\n",
     "        X = np.asarray(X, dtype=np.float64)\n",
     "        if X.ndim != 2:\n",
     "            raise ValueError(\"X must be a 2D array\")\n",
@@ -536,22 +506,17 @@
     "        \n",
     "        N = X.shape[0]\n",
     "        \n",
-    "        # Validate perplexity\n",
     "        if self.perplexity >= N:\n",
     "            raise ValueError(f\"perplexity ({self.perplexity}) must be less than n_samples ({N})\")\n",
     "\n",
-    "        # Edge case: all points identical → no embedding needed\n",
     "        if np.allclose(X, X[0]):\n",
     "            return np.zeros((N, self.n_components))\n",
     "\n",
-    "        # Step 1: Compute high-dimensional similarities P\n",
-    "        P_original = self._compute_P(X)  # Store original for reset after early exaggeration\n",
+    "        P_original = self._compute_P(X)\n",
     "\n",
-    "        # Step 2: Initialize Y deterministically for reproducibility\n",
     "        rng = np.random.default_rng(42)\n",
     "        Y = rng.normal(0, 1e-4, size=(N, self.n_components))\n",
     "\n",
-    "        # Step 3: Early exaggeration (standard = ×4)\n",
     "        early_exaggeration = 4.0\n",
     "        P = np.maximum(P_original * early_exaggeration, 1e-12)\n",
     "\n",
@@ -559,50 +524,39 @@
     "        if isinstance(self.learning_rate, str) and self.learning_rate == \"auto\":\n",
     "            self.learning_rate = max(N / early_exaggeration / 4, 50)\n",
     "\n",
-    "        # Momentum configuration\n",
     "        momentum = 0.5\n",
     "        final_momentum = 0.8\n",
     "        momentum_switch_iter = 250\n",
     "        dY_prev = np.zeros_like(Y)\n",
-    "\n",
     "        prev_kl = np.inf\n",
     "\n",
-    "        # Step 5: Gradient-descent loop\n",
     "        for it in range(self.n_iter):\n",
     "            Q, num = self._compute_Q(Y)\n",
     "            grad = self._gradient(P, Q, Y, num)\n",
     "\n",
-    "            # Gradient update with momentum\n",
     "            dY = momentum * dY_prev - self.learning_rate * grad\n",
     "            Y += dY\n",
     "            dY_prev = dY\n",
     "\n",
-    "            # Clip to prevent runaway values\n",
     "            Y = np.clip(Y, -50, 50)\n",
     "\n",
-    "            # Compute KL divergence for monitoring\n",
     "            kl = np.sum(P * np.log((P + 1e-12) / (Q + 1e-12)))\n",
     "\n",
-    "            # Reduce learning rate if divergence explodes\n",
     "            if kl > prev_kl * 4:\n",
     "                self.learning_rate *= 0.5\n",
     "            prev_kl = kl\n",
     "\n",
-    "            # Switch momentum after warm-up phase\n",
     "            if it == momentum_switch_iter:\n",
     "                momentum = final_momentum\n",
     "\n",
-    "            # Reduce early exaggeration after 100 iters\n",
     "            if it == 100:\n",
-    "                P = P_original.copy()  # Reset to original P (not divided, since we multiplied originally)\n",
+    "                P = P_original.copy()\n",
     "\n",
-    "            # Optional progress logging\n",
     "            if (it + 1) % 300 == 0:\n",
     "                print(f\"Iteration {it + 1}: KL divergence = {kl:.5f}\")\n",
     "\n",
     "        return Y\n",
     "\n",
-    "    # Part 2: Transformation of New Data Points\n",
     "    def transform(self, X_original, Y_original, X_new):\n",
     "        \"\"\"\n",
     "        Embed new data points X_new into an existing t-SNE map\n",
@@ -622,7 +576,6 @@
     "        Y_new : ndarray of shape (n_new, n_components)\n",
     "            Estimated low-dimensional positions of the new samples.\n",
     "        \"\"\"\n",
-    "        # Input validation\n",
     "        X_original = np.asarray(X_original, dtype=np.float64)\n",
     "        Y_original = np.asarray(Y_original, dtype=np.float64)\n",
     "        X_new = np.asarray(X_new, dtype=np.float64)\n",
@@ -639,17 +592,13 @@
     "        Y_new = np.zeros((X_new.shape[0], self.n_components))\n",
     "\n",
     "        for i, x in enumerate(X_new):\n",
-    "            # Compute distances from this new point to all training points\n",
     "            distances = np.sum((X_original - x) ** 2, axis=1)\n",
     "\n",
     "            if np.allclose(distances, distances[0]):\n",
     "                Y_new[i] = np.mean(Y_original, axis=0)\n",
     "                continue\n",
     "\n",
-    "            # Compute Gaussian similarities using same perplexity logic\n",
     "            p_i, _ = self._binary_search_sigma(distances, self.perplexity)\n",
-    "\n",
-    "            # Weighted average of training embeddings\n",
     "            Y_new[i] = np.dot(p_i, Y_original)\n",
     "\n",
     "        return Y_new\n"
@@ -1129,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "a14a3b8890e86f9",
    "metadata": {
     "id": "a14a3b8890e86f9"
@@ -1152,20 +1101,15 @@
     "X = X.astype(np.float64)\n",
     "y = y.astype(np.int32)\n",
     "\n",
-    "# Normalize to [0, 1]\n",
     "X /= 255.0\n",
     "\n",
-    "# Optional: speed optimization\n",
-    "# Reduce dimensionality first with PCA (helps both sklearn and custom t-SNE)\n",
     "print(\"Applying PCA to 50 dimensions for speed...\")\n",
     "pca = PCA(n_components=50)\n",
     "X_pca = pca.fit_transform(X)\n",
     "\n",
-    "# Sample subset (to stay under 5 minutes)\n",
     "N = 2000\n",
     "X_sample, _, y_sample, _ = train_test_split(X_pca, y, train_size=N, stratify=y, random_state=42)\n",
     "\n",
-    "# Split into train/test for the assignment\n",
     "X_train, X_test, label_train, label_test = train_test_split(\n",
     "    X_sample, y_sample, test_size=0.2, stratify=y_sample, random_state=42\n",
     ")\n",
@@ -1370,7 +1314,6 @@
     }
    ],
    "source": [
-    "# --- Parameters ---\n",
     "n_samples = X_train.shape[0]\n",
     "perplexity = 30\n",
     "learning_rate = 200\n",
@@ -1378,18 +1321,12 @@
     "random_state = 42\n",
     "k = 12\n",
     "\n",
-    "# --- Use already preprocessed PCA data ---\n",
     "Xp = X_train  \n",
     "ys = label_train\n",
     "\n",
-    "# --- Reuse the CustomTSNE instance from Small Demonstration ---\n",
-    "# Note: custom_tsne, custom_Y, and custom_tsne_time are already computed in Cell 14\n",
-    "# We reuse them here to avoid retraining\n",
     "tsne_my = custom_tsne\n",
     "Y_my = custom_Y\n",
-    "time_my = custom_tsne_time  # Time already measured in Cell 14\n",
-    "\n",
-    "# --- Run sklearn TSNE ---\n",
+    "time_my = custom_tsne_time\n",
     "t0 = time.perf_counter()\n",
     "ts = SklearnTSNE(\n",
     "    n_components=2,\n",
@@ -1404,7 +1341,6 @@
     "t1 = time.perf_counter()\n",
     "time_sk = t1 - t0\n",
     "\n",
-    "# --- Metrics functions ---\n",
     "def trustworthiness(X_high, X_low, k=12):\n",
     "    n = X_high.shape[0]\n",
     "    D_high = pairwise_distances(X_high)\n",
@@ -1442,7 +1378,6 @@
     "}\n",
     "print(results)\n",
     "\n",
-    "# --- Visualization ---\n",
     "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
     "for idx, (Y, title, metric_val) in enumerate([(Y_my, \"Custom t-SNE\", T_my), (Y_sk, \"sklearn t-SNE\", T_sk)]):\n",
@@ -1459,7 +1394,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Print comparison table\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"PERFORMANCE COMPARISON\")\n",
     "print(\"=\"*60)\n",
@@ -1616,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "9d38dc132b23e7b",
    "metadata": {
     "id": "9d38dc132b23e7b"
@@ -1661,14 +1595,11 @@
     }
    ],
    "source": [
-    "# Transform new test points using custom transform\n",
     "custom_Y_new = custom_tsne.transform(X_train, custom_Y, X_test)\n",
     "\n",
-    "# Run sklearn t-SNE (for baseline comparison)\n",
     "sk_tsne = TSNE(n_components=2, init='random', perplexity=N/10, random_state=42)\n",
     "sk_Y = sk_tsne.fit_transform(X_train)\n",
     "\n",
-    "# Define KNN preservation metric\n",
     "def knn_preservation(X_high, Y_low, k=10):\n",
     "    D_high = pairwise_distances(X_high)\n",
     "    D_low = pairwise_distances(Y_low)\n",
@@ -1676,11 +1607,9 @@
     "    nl = np.argsort(D_low, axis=1)[:, 1:k+1]\n",
     "    return np.mean([len(set(nh[i]).intersection(nl[i])) / k for i in range(X_high.shape[0])])\n",
     "\n",
-    "# Evaluate new data embedding quality\n",
     "score_custom = knn_preservation(X_test, custom_Y_new, k=10)\n",
     "print(f\"KNN Preservation for CustomTSNE new points: {score_custom:.4f}\")\n",
     "\n",
-    "# Visualize train + test embeddings\n",
     "plt.figure(figsize=(9,7))\n",
     "scatter1 = plt.scatter(custom_Y[:, 0], custom_Y[:, 1], s=8, c=label_train.astype(int), \n",
     "                       cmap='tab10', alpha=0.6, label='Training Samples', edgecolors='none')\n",
@@ -1698,7 +1627,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Find nearest neighbor in 2D for each new sample\n",
     "distances_2d = pairwise_distances(custom_Y_new, custom_Y)\n",
     "nearest_idx = np.argmin(distances_2d, axis=1)\n",
     "\n",
